--- a/src/app/components/startMenuBurger/start-burger.scss
+++ b/src/app/components/startMenuBurger/start-burger.scss
@@ -1,9 +1,9 @@
 .start-burger {
   position: absolute;
-  right: 20px;
-  top: 20px;
+  right: 25px;
+  top: 30px;
   width: 50px;
-  height: 50px;
+  height: 38px; //50
   cursor: pointer;
   span,
   span::after,
@@ -11,22 +11,22 @@
     position: absolute;
     display: block;
     width: 100%;
-    height: 10px;
+    height: 6px; // 10
     background-color: #333;
     border-radius: 5px;
     transition: 0.3s;
   }
   span::before {
     content: '';
-    top: -20px;
+    top: -12px; //-20
     transition: top 300ms 300ms, transform 300ms cubic-bezier(0.23, 1, 0.32, 1);
   }
   span {
-    top: 20px;
+    top: 12px; //20
   }
   span::after {
     content: '';
-    bottom: -20px;
+    bottom: -12px; // -20
     transition: bottom 300ms 300ms,
       transform 300ms cubic-bezier(0.23, 1, 0.32, 1);
   }
