--- a/src/style/base.scss
+++ b/src/style/base.scss
@@ -18,6 +18,13 @@ ul {
   list-style: none;
 }
 
+a,
+a:active,
+a:focus {
+  color: #333;
+  text-decoration: none;
+}
+
 .visually-hidden {
   position: absolute;
   width: 1px;
