--- a/src/modules/knowledgeBase/components/tabs/tabs.scss
+++ b/src/modules/knowledgeBase/components/tabs/tabs.scss
@@ -15,7 +15,7 @@
       text-align: center;
       line-height: 35px;
       border-radius: 7px;
-      background-color: #97dffc;
+      background-color: #ccc;
       opacity: 0.6;
       transition: 0.3s all ease-in-out;
       &_active {
