--- a/src/modules/knowledgeBase/components/addItems/add-item.scss
+++ b/src/modules/knowledgeBase/components/addItems/add-item.scss
@@ -42,6 +42,7 @@
     }
   }
   &__form {
+    position: relative;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -129,5 +130,17 @@
     &-btn-reset {
       margin-right: 15px;
     }
+  }
+  &__loading-status {
+    position: absolute;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(255, 255, 255, 0.8);
   }
 }
