--- a/src/modules/knowledgeBase/components/baseListItem/base-list-item.scss
+++ b/src/modules/knowledgeBase/components/baseListItem/base-list-item.scss
@@ -2,4 +2,67 @@
   display: flex;
   width: 100%;
   align-items: center;
+  justify-content: space-between;
+  margin-bottom: 10px;
+  padding: 5px;
+  &_zebra {
+    background-color: #dadada;
+    border-radius: 4px;
+  }
+  &:last-child {
+    margin-bottom: 0;
+  }
+  &__infos {
+    width: calc(100% - 60px);
+    display: flex;
+    align-items: center;
+  }
+  &__name {
+    width: 55%;
+    margin-right: 10px;
+    font-size: 14px;
+    color: #333;
+  }
+  &__numbers-block {
+    width: 45%;
+    display: flex;
+    font-size: 14px;
+    color: #333;
+    align-items: center;
+  }
+  &__numbers {
+    width: 50%;
+    &_calories {
+      width: 100%;
+      padding-left: 20px;
+      margin-right: 0px;
+      background: url('../../../../assets/icons/knowledgeBase/yellow-energy-custom.svg')
+        left center / 13px 13px no-repeat;
+    }
+    &_price {
+      width: 100%;
+      padding-left: 20px;
+      background: url('../../../../assets/icons/knowledgeBase/green-circle-dollar-custom.svg')
+        left center / 15px 15px no-repeat;
+    }
+  }
+  &__btns {
+    display: flex;
+    align-items: center;
+  }
+  &__button {
+    display: block;
+    width: 20px;
+    height: 20px;
+    cursor: pointer;
+    &_edit {
+      margin-right: 15px;
+      background: url('../../../../assets/icons/knowledgeBase/pencil-square-custom.svg')
+        center / contain no-repeat;
+    }
+    &_delete {
+      background: url('../../../../assets/icons/knowledgeBase/trash-custom.svg')
+        center / contain no-repeat;
+    }
+  }
 }
