--- a/src/modules/knowledgeBase/components/addAndEditModal/add-item.scss
+++ b/src/modules/knowledgeBase/components/addAndEditModal/add-item.scss
@@ -21,8 +21,9 @@
     display: flex;
     justify-content: center;
     padding: 10px;
+    background-color: #f2f2f2;
     border-radius: 16px;
-    box-shadow: -4px -4px 8px #d9d9d9, 4px 4px 8px #ffffff;
+    box-shadow: -4px -4px 8px #d9d9d9, 4px 4px 8px #fff;
     &-close {
       position: absolute;
       top: -40px;
@@ -47,12 +48,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    color: #333;
     &-title {
       margin-bottom: 8vh;
+      font-weight: 400;
       font-size: 18px;
       text-align: center;
-      color: #333;
     }
     label {
       position: relative;
