--- a/src/modules/myDay/my-day.scss
+++ b/src/modules/myDay/my-day.scss
@@ -1,9 +1,8 @@
 .my-day {
+  position: relative;
   padding-top: 90px;
-  width: 100%;
-  min-height: 100vh;
+  height: 100vh;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
+  flex-direction: column;
+  justify-content: space-between;
 }
