--- a/src/modules/myDay/components/meal/meal.scss
+++ b/src/modules/myDay/components/meal/meal.scss
@@ -67,6 +67,8 @@
       height: 20px;
       padding-left: 22px;
       margin-right: 15px;
+      font-size: 18px;
+      line-height: 20px;
       background: url('../../../../assets/icons/knowledgeBase/yellow-energy-custom.svg')
         left center / 16px 16px no-repeat;
     }
@@ -74,6 +76,8 @@
       min-width: 50px;
       height: 20px;
       padding-left: 22px;
+      font-size: 18px;
+      line-height: 20px;
       background: url('../../../../assets/icons/knowledgeBase/green-circle-dollar-custom.svg')
         left center / 18px 18px no-repeat;
     }
