added add food item modal

--- a/src/modules/knowledgeBase/components/addAndEditModal/add-item.scss
+++ b/src/modules/knowledgeBase/components/addAndEditModal/add-item.scss
@@ -1,16 +1,8 @@
 @import '../../../../style/variables.scss';
+@import '../../../../style/mixins.scss';
 
 .add-item {
-  display: none;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  justify-content: center;
-  align-items: center;
-  background-color: rgba(242, 242, 242, 0.85);
-  z-index: 10;
+  @include modalOverlay;
   &_active {
     display: flex;
   }
