--- a/src/modules/myDay/components/changeMealNameModal/change-meal-name-modal.scss
+++ b/src/modules/myDay/components/changeMealNameModal/change-meal-name-modal.scss
@@ -22,12 +22,12 @@
     justify-content: center;
     padding: 15px;
     background-color: #f2f2f2;
-    border-radius: 16px;
+    border-radius: 10px;
     box-shadow: -4px -4px 8px #d9d9d9, 4px 4px 8px #fff;
     &-title {
       margin-bottom: 25px;
       font-weight: 400;
-      font-size: 18px;
+      font-size: 16px;
     }
     &-inputs-block {
       width: 100%;
@@ -35,6 +35,7 @@
       flex-direction: column;
     }
     &-label {
+      position: relative;
       width: 100%;
       margin-bottom: 25px;
       display: flex;
@@ -42,7 +43,7 @@
       justify-content: center;
     }
     &-input {
-      width: 80%;
+      width: 90%;
       height: 38px;
       padding: 10px 15px;
       font-size: 16px;
@@ -79,6 +80,13 @@
         background: url('../../../../assets/icons/myDay/ok-check-custom.svg')
           center / cover no-repeat;
       }
+    }
+    &-error {
+      position: absolute;
+      left: 30px;
+      bottom: -20px;
+      font-size: 12px;
+      color: $error-message;
     }
   }
 }
