--- a/src/modules/knowledgeBase/components/addAndEditModal/add-item.scss
+++ b/src/modules/knowledgeBase/components/addAndEditModal/add-item.scss
@@ -7,15 +7,8 @@
     display: flex;
   }
   &__window {
-    position: relative;
-    width: 80%;
+    @include modalWindow;
     min-height: 50%;
-    display: flex;
-    justify-content: center;
-    padding: 10px;
-    background-color: #f2f2f2;
-    border-radius: 16px;
-    box-shadow: -4px -4px 8px #d9d9d9, 4px 4px 8px #fff;
     &-close {
       position: absolute;
       top: -40px;
@@ -41,10 +34,11 @@
     flex-direction: column;
     align-items: center;
     &-title {
+      width: 100%;
       margin-bottom: 8vh;
       font-weight: 400;
-      font-size: 18px;
-      text-align: center;
+      font-size: 14px;
+      text-align: left;
     }
     label {
       position: relative;
@@ -59,14 +53,7 @@
       height: 38px;
       padding: 10px 15px;
       font-size: 18px;
-      border: none;
-      border-radius: 5px;
-      background-color: #f2f2f2;
-      box-shadow: -2px -2px 7px #d9d9d9, 2px 2px 7px #fff;
-      &:focus {
-        outline: none;
-        box-shadow: inset -2px -2px 5px #d9d9d9, inset 2px 2px 5px #fff;
-      }
+      @include modalInput;
     }
     &-input-name-label {
       width: 90%;
@@ -90,6 +77,22 @@
       &-item {
         width: 100%;
       }
+      &-item-calc {
+        width: 55%;
+      }
+    }
+    &-input-calc-group {
+      display: flex;
+      width: 100%;
+      align-items: center;
+      justify-content: space-between;
+    }
+    &-input-calc-btn {
+      width: 35%;
+      height: 38px;
+      display: block;
+      background: url('../../../../assets/icons/knowledgeBase/calculator.svg')
+        center / contain no-repeat;
     }
     &-error {
       position: absolute;
@@ -110,14 +113,7 @@
       width: 40%;
       padding: 5px 10px;
       font-size: 14px;
-      border-radius: 5px;
-      border: none;
-      background-color: #f2f2f2;
-      box-shadow: -2px -2px 7px #d9d9d9, 2px 2px 7px #fff;
-      cursor: pointer;
-      &:active {
-        box-shadow: inset -2px -2px 5px #d9d9d9, inset 2px 2px 5px #fff;
-      }
+      @include modalButton;
     }
     &-btn-reset {
       margin-right: 15px;
