--- a/src/modules/myDay/components/meal/meal.scss
+++ b/src/modules/myDay/components/meal/meal.scss
@@ -65,19 +65,19 @@
       display: block;
       min-width: 50px;
       height: 20px;
-      padding-left: 22px;
-      margin-right: 15px;
+      padding-left: 18px;
+      margin-right: 10px;
       font-size: 18px;
-      line-height: 20px;
+      line-height: 21px;
       background: url('../../../../assets/icons/knowledgeBase/yellow-energy-custom.svg')
         left center / 16px 16px no-repeat;
     }
     &-price {
       min-width: 50px;
       height: 20px;
-      padding-left: 22px;
+      padding-left: 25px;
       font-size: 18px;
-      line-height: 20px;
+      line-height: 21px;
       background: url('../../../../assets/icons/knowledgeBase/green-circle-dollar-custom.svg')
         left center / 18px 18px no-repeat;
     }
@@ -93,6 +93,9 @@
     height: 25px;
     background-color: transparent;
     border: none;
+    &_empty {
+      background: none;
+    }
     &_delete {
       background: url('../../../../assets/icons/myDay/meal-delete.svg') center /
         25px 25px no-repeat;
