--- a/src/modules/myDay/components/mealFoodItem/meal-food-item.scss
+++ b/src/modules/myDay/components/mealFoodItem/meal-food-item.scss
@@ -1,10 +1,17 @@
 .food-item {
   width: 100%;
+  height: 20px;
+  padding: 4px;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  &_zebra {
+    background-color: #dadada;
+    border-radius: 4px;
+  }
   &__name {
     display: flex;
+    font-size: 14px;
   }
   &__nums-block {
     width: 40%;
@@ -13,16 +20,17 @@
     justify-content: space-between;
   }
   &__num {
-    width: 50%;
+    width: 42%;
     height: 20px;
-    padding-right: 25px;
+    padding-left: 20px;
+    font-size: 14px;
     &-weight {
-      background: url('../../../../assets/icons/myDay/scale-balanced-custom.svg')
-        right center / contain no-repeat;
+      background: url('../../../../assets/icons/myDay/scales-2-line.svg') left
+        center / 15px 15px no-repeat;
     }
     &-calories {
-      background: url('../../../../assets/icons/knowledgeBase/energy-custom.svg')
-        right center / contain no-repeat;
+      background: url('../../../../assets/icons/myDay/lightning.svg') left
+        center / 15px 15px no-repeat;
     }
   }
 }
