added delete mode, view and editor mode

--- a/src/modules/knowledgeBase/components/tabs/tabs.scss
+++ b/src/modules/knowledgeBase/components/tabs/tabs.scss
@@ -2,6 +2,8 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+  overflow: hidden;
+  overflow-y: scroll;
   &__panel {
     width: 100%;
     height: 35px;
@@ -29,6 +31,8 @@
     display: none;
     width: 100%;
     padding-bottom: 20px;
+    overflow: hidden;
+    overflow-y: scroll;
     &_active {
       display: block;
     }
