--- a/src/app/components/header/header.scss
+++ b/src/app/components/header/header.scss
@@ -4,7 +4,8 @@
   left: 0;
   width: 100vw;
   height: 90px;
-  z-index: 1;
+  background-color: #f2f2f2;
+  z-index: 10;
   &__logo-box {
     position: absolute;
     left: 20px;
