--- a/src/modules/myDay/components/buttonsBlock/buttons-block.scss
+++ b/src/modules/myDay/components/buttonsBlock/buttons-block.scss
@@ -10,7 +10,6 @@
     display: inline-block;
     line-height: 40px;
     text-align: center;
-    color: #333;
     border: none;
     border-radius: 10px;
     background-color: #f2f2f2;
@@ -18,8 +17,10 @@
     transition: transform 0.2s;
     cursor: pointer;
     &:active {
-      color: #333;
       box-shadow: inset -6px -6px 12px #d9d9d9, inset 6px 6px 12px #fff;
+    }
+    &_disabled {
+      opacity: 0.5;
     }
   }
 }
