--- a/src/modules/myDay/components/mealsList/meals-list.scss
+++ b/src/modules/myDay/components/mealsList/meals-list.scss
@@ -1,6 +1,10 @@
 .meals-list {
   width: 100%;
+  padding-top: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  overflow: hidden;
+  overflow-y: scroll;
+  border-radius: 10px;
 }
