--- a/src/modules/myDay/components/selectFoodItemModal/select-food-item-modal.scss
+++ b/src/modules/myDay/components/selectFoodItemModal/select-food-item-modal.scss
@@ -24,6 +24,10 @@
     font-size: 16px;
   }
   &__list {
+    max-height: 80vh;
+    overflow: hidden;
+    overflow-y: scroll;
+    padding: 5px 0;
   }
   &__empty {
     width: 100%;
