--- a/src/app/components/loading/loading.scss
+++ b/src/app/components/loading/loading.scss
@@ -5,6 +5,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: #f2f2f2;
   img {
     display: block;
     width: 50px;
