--- a/src/app/components/startPage/start-page.scss
+++ b/src/app/components/startPage/start-page.scss
@@ -64,7 +64,7 @@
     }
   }
   &__btn {
-    width: 150px;
+    width: 100%;
     height: 40px;
     display: inline-block;
     line-height: 40px;
