--- a/src/modules/knowledgeBase/components/createAndEditModal/add-item.scss
+++ b/src/modules/knowledgeBase/components/createAndEditModal/add-item.scss
@@ -8,31 +8,22 @@
   }
   &__window {
     @include modalWindow;
-    min-height: 50%;
-    &-close {
-      position: absolute;
-      top: -40px;
-      right: 0;
-      display: block;
-      width: 40px;
-      height: 40px;
-      border: none;
-      background-color: transparent;
-      span {
-        display: block;
-        width: 100%;
-        height: 100%;
-        background: url('../../../../assets/icons/knowledgeBase/message_close-custom.svg')
-          center / cover no-repeat;
-      }
-    }
+    height: 50%;
   }
   &__form {
     position: relative;
     width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-between;
+    &-fields-block {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
     &-title {
       width: 100%;
       margin-bottom: 8vh;
@@ -104,7 +95,7 @@
     &-btn-group {
       width: 90%;
       margin-top: auto;
-      margin-bottom: 2vh;
+      margin-bottom: 5px;
       display: flex;
       justify-content: flex-end;
       align-items: center;
