added user guide

--- a/src/app/components/startPage/start-page.scss
+++ b/src/app/components/startPage/start-page.scss
@@ -1,6 +1,6 @@
 .start-page {
   width: 100%;
-  height: 100vh;
+  height: 100%;
   padding-top: 90px;
   background: url('../../../assets/images/mainScreen/main-pic.png') bottom 27vh
     center / contain no-repeat;
