--- a/src/app/components/header/header.scss
+++ b/src/app/components/header/header.scss
@@ -15,6 +15,21 @@
     background: url('../../../assets/images/logo/logolws.png') center / contain
       no-repeat;
   }
+  &__user-box {
+    position: absolute;
+    left: 40px;
+    top: 25px;
+    width: 220px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: inset -2px -2px 5px #d9d9d9, inset 2px 2px 5px #fff;
+    span {
+      font-weight: 700;
+      font-size: 16px;
+    }
+  }
   &__name-box {
     position: absolute;
     display: flex;
