--- a/src/app/components/startMenuBurger/start-burger.scss
+++ b/src/app/components/startMenuBurger/start-burger.scss
@@ -4,6 +4,9 @@
   top: 30px;
   width: 50px;
   height: 38px; //50
+  &_none {
+    display: none;
+  }
   cursor: pointer;
   span,
   span::after,
