--- a/src/modules/myDay/components/mealFoodItem/meal-food-item.scss
+++ b/src/modules/myDay/components/mealFoodItem/meal-food-item.scss
@@ -1,6 +1,5 @@
 .food-item {
   width: 100%;
-  height: 20px;
   padding: 4px;
   display: flex;
   align-items: center;
@@ -18,6 +17,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    flex-shrink: 0;
   }
   &__num {
     width: 42%;
