--- a/src/style/base.scss
+++ b/src/style/base.scss
@@ -1,9 +1,11 @@
 html {
-  height: 100%;
+  height: 100vh;
+  min-height: -webkit-fill-available;
 }
 
 body {
-  height: 100%;
+  height: 100vh;
+  min-height: -webkit-fill-available;
   margin: 0;
   font-family: 'San-Francisco', sans-serif;
   color: #333;
