autorize and fix bugs

--- a/src/app/components/startMenu/start-menu.scss
+++ b/src/app/components/startMenu/start-menu.scss
@@ -1,6 +1,6 @@
 .start-menu {
-  position: fixed;
-  left: -100vw;
+  position: absolute;
+  left: -100%;
   width: 75%;
   height: 100vh;
   display: flex;
