--- a/src/app/components/startPage/start-page.scss
+++ b/src/app/components/startPage/start-page.scss
@@ -20,24 +20,24 @@
     font-family: 'Genos';
     font-size: 40px;
     &-notes {
-      margin-left: 2vw;
+      margin-left: 2%;
       text-shadow: 0 0 10px #fff, 5px 5px 10px #fff, -5px -5px 10px #fff,
         5px -5px 10px #fff, -5px 5px 10px #fff;
     }
     &-about {
-      margin-left: 20vw;
+      margin-left: 28%;
       text-shadow: 0 0 10px #fff, 5px 5px 10px #fff, -5px -5px 10px #fff,
         5px -5px 10px #fff, -5px 5px 10px #fff;
     }
     &-my {
       margin-left: auto;
-      margin-right: 25vw;
+      margin-right: 30%;
       text-shadow: 0 0 10px #fff, 5px 5px 10px #fff, -5px -5px 10px #fff,
         5px -5px 10px #fff, -5px 5px 10px #fff;
     }
     &-food {
       margin-left: auto;
-      margin-right: 2vw;
+      margin-right: 2%;
       text-shadow: 0 0 10px #fff, 5px 5px 10px #fff, -5px -5px 10px #fff,
         5px -5px 10px #fff, -5px 5px 10px #fff;
     }
