--- a/src/app/components/header/header.scss
+++ b/src/app/components/header/header.scss
@@ -1,8 +1,8 @@
 .header {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
   height: 90px;
   background-color: #f2f2f2;
   z-index: 10;
