--- a/src/modules/authModule/components/selectAuth/select-auth.scss
+++ b/src/modules/authModule/components/selectAuth/select-auth.scss
@@ -12,11 +12,22 @@
     justify-content: center;
     padding: 40px 0;
   }
+  &__in {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  &__out {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
   &__case {
     display: flex;
     flex-direction: column;
     align-items: center;
     margin-right: 50px;
+    cursor: pointer;
     &:last-child {
       margin-right: 0;
     }
@@ -31,6 +42,10 @@
       }
       &_log {
         background: url('../../../../assets/icons/auth/door-open.svg') center /
+          contain no-repeat;
+      }
+      &_logout {
+        background: url('../../../../assets/icons/auth/door-exit.svg') center /
           contain no-repeat;
       }
     }
