--- a/src/modules/myDay/components/selectFoodItemModal/select-food-item-modal.scss
+++ b/src/modules/myDay/components/selectFoodItemModal/select-food-item-modal.scss
@@ -25,8 +25,7 @@
   }
   &__list {
     max-height: 80vh;
-    overflow: hidden;
-    overflow-y: scroll;
+    overflow: scroll;
     padding: 5px 0;
   }
   &__empty {
