--- a/src/modules/userGuideModule/about.scss
+++ b/src/modules/userGuideModule/about.scss
@@ -33,8 +33,7 @@
   &__descr {
     width: 100%;
     height: 40vh;
-    overflow: hidden;
-    overflow-y: scroll;
+    overflow: scroll;
     padding: 5px 0;
     padding-top: 15px;
     padding-bottom: 5px;
@@ -136,8 +135,7 @@
     &__descr {
       width: 100%;
       height: 33vh;
-      overflow: hidden;
-      overflow-y: scroll;
+      overflow: scroll;
       padding: 5px 0;
       padding-top: 5px;
       padding-bottom: 10px;
