--- a/src/style/base.scss
+++ b/src/style/base.scss
@@ -46,38 +46,41 @@ a:focus {
 }
 
 .container {
+  position: relative;
   width: 100%;
   padding: 0 15px;
+  overflow: hidden;
 }
 
 @media (min-width: 576px) {
   .container {
-    width: 540px;
-    padding: 0;
+    width: 475px;
+    // width: 540px;
+    // padding: 0;
     margin: 0 auto;
   }
 }
 
-@media (min-width: 768px) {
-  .container {
-    width: 720px;
-  }
-}
+// @media (min-width: 768px) {
+//   .container {
+//     width: 720px;
+//   }
+// }
 
-@media (min-width: 992px) {
-  .container {
-    width: 960px;
-  }
-}
+// @media (min-width: 992px) {
+//   .container {
+//     width: 960px;
+//   }
+// }
 
-@media (min-width: 1200px) {
-  .container {
-    width: 1140px;
-  }
-}
+// @media (min-width: 1200px) {
+//   .container {
+//     width: 1140px;
+//   }
+// }
 
-@media (min-width: 1400px) {
-  .container {
-    width: 1320px;
-  }
-}
+// @media (min-width: 1400px) {
+//   .container {
+//     width: 1320px;
+//   }
+// }
