refactoring names of files and functions, added sets to knoledge base section

--- a/src/modules/userGuideModule/user-guide.scss
+++ b/src/modules/userGuideModule/user-guide.scss
@@ -6,7 +6,7 @@
   flex-direction: column;
   justify-content: space-between;
   &__book {
-    overflow: scroll;
+    overflow: auto;
     padding: 5px 0;
   }
   &__buttons-block {
