--- a/src/modules/knowledgeBase/components/confirmDeleteModal/confirm-delete.scss
+++ b/src/modules/knowledgeBase/components/confirmDeleteModal/confirm-delete.scss
@@ -1,9 +1,9 @@
 .confirm-delete {
   display: none;
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   justify-content: center;
   align-items: center;
