--- a/src/modules/knowledgeBase/components/error/error-page.scss
+++ b/src/modules/knowledgeBase/components/error/error-page.scss
@@ -2,10 +2,10 @@
 
 .error-page {
   display: flex;
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   justify-content: center;
   align-items: center;
