--- a/src/modules/knowledgeBase/components/tabs/tabs.scss
+++ b/src/modules/knowledgeBase/components/tabs/tabs.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  overflow: scroll;
+  overflow: auto;
   &__panel {
     width: 100%;
     height: 35px;
@@ -30,7 +30,7 @@
     display: none;
     width: 100%;
     padding-bottom: 20px;
-    overflow: scroll;
+    overflow: auto;
 
     &_active {
       display: block;
