--- a/src/modules/myDay/components/changeMealNameModal/change-meal-name-modal.scss
+++ b/src/modules/myDay/components/changeMealNameModal/change-meal-name-modal.scss
@@ -2,10 +2,10 @@
 
 .change-meal-name {
   display: none;
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   justify-content: center;
   align-items: center;
