--- a/src/modules/myDay/components/mealsList/meals-list.scss
+++ b/src/modules/myDay/components/mealsList/meals-list.scss
@@ -4,6 +4,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  overflow: scroll;
+  overflow: auto;
   border-radius: 10px;
 }
