--- a/src/modules/userGuideModule/about.scss
+++ b/src/modules/userGuideModule/about.scss
@@ -25,7 +25,7 @@
     flex-direction: column;
     align-items: center;
     background: url('../../assets/icons/about/lightning.svg') bottom right /
-      150px 150px no-repeat;
+      120px 120px no-repeat;
     &-info {
       text-align: center;
     }
@@ -33,7 +33,7 @@
   &__descr {
     width: 100%;
     height: 40vh;
-    overflow: scroll;
+    overflow: auto;
     padding: 5px 0;
     padding-top: 15px;
     padding-bottom: 5px;
@@ -54,7 +54,6 @@
   }
   &__contacts {
     width: 100%;
-    // padding-top: 2vh;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -135,7 +134,7 @@
     &__descr {
       width: 100%;
       height: 33vh;
-      overflow: scroll;
+      overflow: auto;
       padding: 5px 0;
       padding-top: 5px;
       padding-bottom: 10px;
