--- a/src/modules/myDay/components/addFoodItemModal/add-food-item-modal.scss
+++ b/src/modules/myDay/components/addFoodItemModal/add-food-item-modal.scss
@@ -77,14 +77,36 @@
     align-items: center;
     justify-content: space-between;
   }
+  &__label-addBtn {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+  }
   &__addBtn {
     display: block;
-    width: 35px;
-    height: 35px;
+    width: 20px;
+    height: 20px;
     background-color: #f2f2f2;
     border: none;
-    background: url('../../../../assets/icons/myDay/food-item-add.svg') center /
-      contain no-repeat;
+    &-food {
+      background: url('../../../../assets/icons/myDay/food-plus.svg') center /
+        contain no-repeat;
+      &-text {
+        display: block;
+        margin-left: 5px;
+        margin-right: 10px;
+        font-size: 14px;
+      }
+    }
+    &-set {
+      background: url('../../../../assets/icons/myDay/food-plus.svg') center /
+        contain no-repeat;
+      &-text {
+        display: block;
+        margin-left: 5px;
+        font-size: 14px;
+      }
+    }
   }
   &__confirm-block {
     display: flex;
@@ -116,5 +138,16 @@
     bottom: -18px;
     font-size: 12px;
     color: $error-message;
+  }
+}
+
+@media (max-width: 320px) and (max-height: 568px) {
+  .form {
+    &__btn {
+      &-cansel {
+        margin-right: 10px;
+        margin-left: 15px;
+      }
+    }
   }
 }
