--- a/src/modules/myDay/components/meal/meal.scss
+++ b/src/modules/myDay/components/meal/meal.scss
@@ -42,6 +42,7 @@
     margin-bottom: 20px;
     background: url('../../../../assets/icons/myDay/food-item-add.svg') right
       center / 30px 30px no-repeat;
+    cursor: pointer;
     &::after {
       position: absolute;
       content: '';
@@ -50,6 +51,7 @@
       width: calc(100% - 40px);
       height: 1px;
       background-color: #333;
+      cursor: pointer;
     }
   }
   &__res {
